Deploy auto con FIREBASE_TOKEN + fixes de acentos, CSV y Cliente Editorial

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -25,7 +25,6 @@ jobs:
       - name: Deploy to Firebase Hosting (alfa-206d1)
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          firebase deploy --only hosting:alfa-206d1 --project alfa-206d1
+        run: firebase deploy --only hosting:alfa-206d1 --project alfa-206d1
 
 
