--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,24 +24,24 @@ jobs:
           node-version: '20'
 
       - name: Auth via Service Account (google-github-actions/auth@v2)
-        if: ${{ secrets.FIREBASE_SERVICE_ACCOUNT != '' }}
+        if: ${{ env.FIREBASE_SERVICE_ACCOUNT != '' }}
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
+          credentials_json: ${{ env.FIREBASE_SERVICE_ACCOUNT }}
 
       - name: Install Firebase CLI
         run: npm i -g firebase-tools
 
       - name: Deploy to Firebase with Service Account
-        if: ${{ secrets.FIREBASE_SERVICE_ACCOUNT != '' }}
+        if: ${{ env.FIREBASE_SERVICE_ACCOUNT != '' }}
         run: |
           echo "Using Service Account via google-github-actions/auth@v2"
           firebase deploy --only hosting:alfa-206d1,firestore:rules --project alfa-206d1
 
       - name: Deploy to Firebase with FIREBASE_TOKEN (fallback)
-        if: ${{ secrets.FIREBASE_SERVICE_ACCOUNT == '' }}
+        if: ${{ env.FIREBASE_SERVICE_ACCOUNT == '' }}
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
         run: |
           echo "Service Account not set. Falling back to FIREBASE_TOKEN"
           firebase deploy --only hosting:alfa-206d1,firestore:rules --project alfa-206d1
